@@ -45,6 +45,7 @@
  * fix throwing exception with batch mutation of counter super columns
    (CASSANDRA-2949)
  * ignore system tables during repair (CASSANDRA-2979)
+ * fix assertion error during compaction of counter CFs (CASSANDRA-2968)
 
 
 0.8.2
